[package]
name = "pals"
version = "0.1.0"
authors = ["Jake Craige <jake@example.com>"]

[dependencies]
base64 = "0.9.3"
openssl = "0.10.12"  
rand = "  0.5"
num-bigint = { version = "0.2", features = ["rand"] }
num-traits = "0.2"
num-iter = "0.1"
num-integer = "0.1"
sha2 = "0.8.0"
ripemd160 = "0.7.0"
secp256k1 = { version = "0.12.2", features = ["rand"] }
